Revert "Reformat test-clients project"
This reverts commit 6fa2331a1641934cdb915250172352a7fb946886.